copying the og website

--- a/index.html
+++ b/index.html
@@ -7,28 +7,76 @@
     </head>
     <body>
         <nav> This is the nav, whose purpose is to provide navigation links within the document or to other documents. This can be a menu. </nav> 
-        <h1> This is the first level of heading </h1>
+        <main>
 
-        <h2> This is the second level of heading </h2> 
+        <header>
+            <h1> Welcome to Ravi's Website  </h1>
+        </header> 
+        <section>
+           <p>
+            My name is Ravi Tapia, and I am currently a 2nd year Computer Science Major at UCSD.
+            This is where I will be putting most of my projects such as Flirty Bot and future ideas
+           </p>
+        </section>
 
+        <hr>
+        <section>
+            <h2> Why Computer Science?? </h2>
+            <p>
+                I chose computer science because ever since I was child I have been interested in programs through my love of games. 
+                I always wanted to create my own games and create something that would benefit the world or bring joy it. Everytime
+                 one of my projects is able to work or my print statements like Hello world works, I was filled with joy.
+            </p>
+        </section> 
+        <hr>
+        <section>
+            <h2> Languages </h2>
+            <div>
+                <ol> - Javascript </ol>
+                <ol> - Java </ol>
+                <ol> - C++ </ol>
+                <ol> - HTML </ol>
+            </div>
+        </section> 
+        <hr>
+
+        <section>
+            <p> I am new to github so please <b>bare with me</b> and I am currently relearning </p>
+            <p> Please follow me on Instagram(Do a link here) !! </p> 
+            <p> 
+                <b> Flirty bot </b> was a discord bot I made during summer as a little side project. It interacts with
+                gives them words of affirmations, and in other cases pick up lines, hence the name flirty bot. It is a work in progress 
+                and I plan to make it do much more!
+            </p> 
+        </section>
+
+        <hr>
+        <section>
+            <h2> Fun Facts About Me!</h2>
+            <div>
+                <li> My favorite anime is Kuroko No Basket and Naruto  </li>
+                <li> My first print statement was 
+                    <code>
+                        <blockquote>
+                        System.out.println("I Really Hope This works");
+                        </blockquote>
+                    </code>
+                </li>
+                <li> My favorite animal ::dolphin:: </li>
+                <li> 
+                    My Favorite Quote:
+                    <blockquote>
+                        "Muffin Button"
+                    </blockquote>
+                </li>
+
+            </div>
+        </section>
         <h3> This is the third level of heading</h3>
 
-        <main> This is the dominant content of the body of a document. This is the main part of it. </main>
-
-        <aside> This represents parts of a document that is not directly connected to the main content, so basically random stuff</aside> 
-
-
-
-
-
-
-
-
-
-
-
-
-
-        <footer> This is the footer, this project was created by Ravi Tapia </footer>
+        </main>
+        <aside>
+         <footer> This is the footer, this project was created by Ravi Tapia </footer>
+        </aside>
     </body>
 </html>
