--- a/index.html
+++ b/index.html
@@ -1,82 +1,175 @@
-<html>
-    <head>
-        <title> Ravi's Website </title>
-        <meta charset="UTF-8">
-        <meta name="author" content="Ravi Tapia">
-        <meta name="viewport" content="width=device-width, intial-scale=1.0">
-    </head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title> Ravi Website</title>
+    <meta name="description" content="HTML remake of Og website CSE 110">
+    <meta name="author" content="Ravindran Gabriel Tapia">
+    <style>
+        table, th, td {
+          border: 1px solid black;
+        }
+    </style>
+</head>
     <body>
-        <nav> This is the nav, whose purpose is to provide navigation links within the document or to other documents. This can be a menu. </nav> 
+        <header> 
+           <h1> Hi :D </h1> 
+        </header>
+        <nav> This is for the navigation of the website </nav>
         <main>
-
-        <header>
-            <h1> Welcome to Ravi's Website  </h1>
-        </header> 
-        <section>
-           <p>
-            My name is Ravi Tapia, and I am currently a 2nd year Computer Science Major at UCSD.
-            This is where I will be putting most of my projects such as Flirty Bot and future ideas
-           </p>
-        </section>
-
-        <hr>
-        <section>
-            <h2> Why Computer Science?? </h2>
-            <p>
-                I chose computer science because ever since I was child I have been interested in programs through my love of games. 
-                I always wanted to create my own games and create something that would benefit the world or bring joy it. Everytime
-                 one of my projects is able to work or my print statements like Hello world works, I was filled with joy.
-            </p>
-        </section> 
-        <hr>
-        <section>
-            <h2> Languages </h2>
-            <div>
-                <ol> - Javascript </ol>
-                <ol> - Java </ol>
-                <ol> - C++ </ol>
-                <ol> - HTML </ol>
+            <div id="AboutMe">
+                <section>
+                    <h2> Who Am I? </h2> 
+                        <p>
+                            My name is Ravindran Tapia, but I go by Ravi for short! I am currently a 2nd year Computer Science major at UCSD. I will be using this website as 
+                            practice for HTML and give a little detail about myself.
+                        </p>
+                    <hr>
+                </section>
+                <section>
+                    <h2> Why Computer Science?? </h2>
+                    <p> 
+                        I chose computer science 
+                        because ever since I was child I have been interested in programs through my love of games. 
+                        I always wanted to create my own games and create something that would benefit the world or bring joy it. 
+                        Everytime one of my projects is able to work or my print statements like Hello world works, I was filled with joy.
+                    </p>
+                    <hr>
+                </section>
+                <section>
+                    <h2>Languages</h2>
+                    <p> These are the languages I have learned over the years </p>
+                    <ol>
+                        <li> Javascript</li>
+                        <li> Java </li>
+                        <li> C++</li>
+                        <li> C</li>
+                        <li> HTML (Currently Relearning ) </li>
+                    </ol>
+                    <hr>
+                </section>
             </div>
-        </section> 
-        <hr>
+                I am currently <i> relearning</i> and trying to <b> improve </b> my skills in CS and Web Dev has personally been an interest of mine.
+                I have been creating website since I was <em> little</em> but this is my first time doing it from scratch. <pre> This is pre </pre>
+                <br>
+                Anways, please use my social media if you would like to connect! 
+                <br> 
+                Follow me on <a href="https://www.instagram.com/rravi.tpia/"> Instagram </a> to reach out to me fast!
+            <hr>
+            <div id="FunStuff">
+                <h2> Random Things I Like Or Want to Show Off </h2>
+                <p>
+                    Using Javascript and HTML, you are able to draw things on your website!
+                </p>
+                <canvas id="myCanvas" width=200 height=100> I don't think you are supposed to see this text lol </canvas>
+                <br>
+                 <b> My favorite Fruit:  </b>
+                 <br>
+                 <img class="picture1" src="https://images.all-free-download.com/images/graphiclarge/mango_191420.jpg" alt="Mango Fruit" width=100 height=100>
 
-        <section>
-            <p> I am new to github so please <b>bare with me</b> and I am currently relearning </p>
-            <p> Please follow me on Instagram(Do a link here) !! </p> 
-            <p> 
-                <b> Flirty bot </b> was a discord bot I made during summer as a little side project. It interacts with
-                gives them words of affirmations, and in other cases pick up lines, hence the name flirty bot. It is a work in progress 
-                and I plan to make it do much more!
-            </p> 
-        </section>
+                 <br>
+                <br> 
+                <i>Something that lives rent-free in my head: </i>
+                <br>
 
-        <hr>
-        <section>
-            <h2> Fun Facts About Me!</h2>
-            <div>
-                <li> My favorite anime is Kuroko No Basket and Naruto  </li>
-                <li> My first print statement was 
-                    <code>
-                        <blockquote>
-                        System.out.println("I Really Hope This works");
-                        </blockquote>
-                    </code>
-                </li>
-                <li> My favorite animal ::dolphin:: </li>
-                <li> 
-                    My Favorite Quote:
-                    <blockquote>
-                        "Muffin Button"
-                    </blockquote>
-                </li>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/3sxRAeh8f7w" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+                <br>
+
+                <b><i> A Common Phrase a friend and I say that no one really gets is "Mahogany" and it is from this video  // checkout Team Four Star and their DBZA series! </i></b>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/14D5wKSVlXg" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
-        </section>
-        <h3> This is the third level of heading</h3>
+            <hr>
+            <table>
+                <caption><b> My Current Schedule </b>  </caption>
+                <thead>
+                    <tr>
+                        <th>              </th>
+                        <th> Monday</th>
+                        <th> Tuesday </th>
+                        <th> Wednesday </th>
+                        <th>Thursday </th> 
+                        <th>Friday</th> 
+                    </tr> 
+                </thead>
+                <tbody>
+                    <tr>
+                        <td> Classes:      </td>
+                        <td> Math 183, CSE 110, CSE 101</td> 
+                        <td> </td>
+                        <td> Math 183, CSE 110, CSE 101, MUS 15 </td>
+                        <td> </td> 
+                        <td> Math 183, CSE 110, CSE 101, MUS 15</td>
+                    </tr>
+                    <tr>
+                        <td> Self-Care </td>
+                        <td> Take A Nap </td>
+                        <td> Workout</td>
+                        <td> Take A Nap </td>
+                        <td> Workout </td>
+                        <td> Take a nap </td>
+                    </tr>
+                </tbody>
+            </table> 
+            <hr>
+
+            <section>
+                <h2> Please Fill Out This Fun Form! </h2>
+                <div id="randform">
+                    <form action="/action.php">
+                        <fieldset> 
+                            <legend> Personal Information: </legend> 
+                            <label for="fname"> First Name: </label>
+                            <input type="text" id="fname" name="firstname"><br><br>
+                            <label for="lname"> Last Name: </label> 
+                            <input type="text" id="lname" name="lname"><br><br>
+                            <label for="email"> Email: </label>
+                            <input type="text" id="email" name="email"><br><br>
+                            <label for="birthday"> What is todays date? </label>
+                            <input type="date" id="birthday" name="birthday"><br><br>
+                            <label for="college"> If you go to <b> UCSD </b>, which college do you go to: </label>
+                            <select id="college">
+                                <option> Muir </option>
+                                <option> Revelle </option>
+                                <option> Muir </option>
+                                <option> ERC </option> 
+                                <option> Warren </option> 
+                                <option> Sixth </option> 
+                                <option> Seventh </option>
+                            </select>
+
+                            <br><br>
+
+                            <b>Sex:</b>
+                            <input type="radio" id="male" name="Gender" value="male">
+                            <label for="male"> Male </label>
+                            <input type="radio" id="female" name="Gender" value="female">
+                            <label for="female"> Female </label>
+                            <input type="radio" id="other" name="Gender" value="Other">
+                            <label for="other">Other</label> 
+                            
+                            <br><br>
+
+                            <b> Select all things you like </b>
+                            
+                            <input type="checkbox" id="dog" name="dog">
+                            <label for="dog"> Dog </label>
+                            <input type="checkbox" id="cat" name="cat">
+                            <label for="cat"> Cat </label>
+                            <input type="checkbox" id="fish" name="fish">
+                            <label for="fish"> Fish </label>l
+                        </fieldset>   
+                     </form>f
+                 </div> 
+            </section>  
 
         </main>
-        <aside>
-         <footer> This is the footer, this project was created by Ravi Tapia </footer>
-        </aside>
+        <footer> Created by Ravi Tapia </footer> 
+        <script>
+            var c = document.getElementById("myCanvas");
+            var ctx = c.getContext("2d");
+            ctx.font = "30px monospace";
+            ctx.strokeText("UWU OWO WOW", 10, 50);
+        </script>
     </body>
 </html>
