--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
         <header> 
            <h1> Hi :D </h1> 
         </header>
-        <nav> This is for the navigation of the website </nav>
+        <nav> 
+            <a href="#AboutMe">About Me</a>
+            <a href="#FunStuff">Fun Stuff!</a>
+            <a href="#randform">Random Form</a>
+        </nav>
         <main>
             <div id="AboutMe">
                 <section>
@@ -129,9 +133,9 @@
             </table> 
             <hr>
 
-            <section>
+            <div id="randform">
+                <section>
                 <h2> Please Fill Out This Fun Form! </h2>
-                <div id="randform">
                     <form action="/action.php">
                         <fieldset> 
                             <legend> Personal Information: </legend> 
@@ -206,8 +210,8 @@
                             <input type="number" id="num" name="hours">
                         </fieldset>   
                      </form>
-                 </div> 
             </section>  
+        </div>
 
         </main>
         <footer> Created by Ravi Tapia </footer> 
