--- a/index.html
+++ b/index.html
@@ -124,40 +124,39 @@
             </div>
             <hr>
             <table>
+                <caption><b> Anime Ratings </b>  </caption>
                 <colgroup>
-                    <col span="2" style="background-color:blueviolet">
-                    <col style="background-color:black">
-                  </colgroup>
-                <caption><b> My Current Schedule </b>  </caption>
-                <thead>
+                    <col span="3" style="background-color:cadetblue">
+                </colgroup>
                     <tr>
-                        <th>              </th>
-                        <th> Monday</th>
-                        <th> Tuesday </th>
-                        <th> Wednesday </th>
-                        <th>Thursday </th> 
-                        <th>Friday</th> 
-                    </tr> 
-                </thead>
-                <tbody>
-                    <tr>
-                        <td> Classes:      </td>
-                        <td> Math 183, CSE 110, CSE 101</td> 
-                        <td> </td>
-                        <td> Math 183, CSE 110, CSE 101, MUS 15 </td>
-                        <td> </td> 
-                        <td> Math 183, CSE 110, CSE 101, MUS 15</td>
-                    </tr>
-                    <tr>
-                        <td> Self-Care </td>
-                        <td> Take A Nap </td>
-                        <td> Workout</td>
-                        <td> Take A Nap </td>
-                        <td> Workout </td>
-                        <td> Take a nap </td>
-                    </tr>
-                </tbody>
-            </table> 
+                        <th>Rank </th>
+                        <th>Title</th>
+                        <th> Genre</th>
+                      </tr>
+                      <tr>
+                        <td>1. </td>
+                        <td>Kuroko No Basket</td>
+                        <td>Sports</td>
+                      </tr>
+                      <tr>
+                        <td>2. </td>
+                        <td>Attack On Titan</td>
+                        <td> Action </td>
+                      </tr>
+                      <tr>
+                          <td>3.</td>
+                          <td>Naruto</td>
+                          <td>Action/Comedy</td> 
+                      </tr>
+                      <tr>
+                          <td>4.</td>
+                          <td>Toradora</td>
+                          <td> Romance Comedy</td>
+                      </tr>
+
+
+                    
+                </table>
             <hr>
 
             <div id="randform">
