--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title> Ravi Website</title>
     <meta name="description" content="HTML remake of Og website CSE 110">
     <meta name="author" content="Ravindran Gabriel Tapia">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" media="screen and|not|only" href="style.css">
     <style>
         table, th, td {
           border: 1px solid black;
@@ -317,6 +317,14 @@
             </ul>
 
         </section>
+        <ul class="characters">
+            <li class="characters-item">Naruto</li>
+            <li class="characters-item">Goku</li>
+            <li class="characters-item">Pikachu</li>
+            <li class="characters-item">Todoroki</li>
+            <li class="characters-item"> Sasuke</li>
+            <li class="characters-item">Itachi </li>
+          </ul>
 
         </main>
 
