media queries bug fixes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title> Ravi Website</title>
     <meta name="description" content="HTML remake of Og website CSE 110">
     <meta name="author" content="Ravindran Gabriel Tapia">
-    <link rel="stylesheet" media="screen and|not|only" href="style.css">
+    <link rel="stylesheet" href="style.css">
     <style>
         table, th, td {
           border: 1px solid black;
