added section for grid

--- a/index.html
+++ b/index.html
@@ -324,7 +324,15 @@
             <li class="characters-item">Todoroki</li>
             <li class="characters-item"> Sasuke</li>
             <li class="characters-item">Itachi </li>
-          </ul>
+        </ul>
+
+        <h2> Some friends from back home: </h2>
+        <div class="friends">
+            <div> Gabe: My first friend in middle school, he stuck by me through everything</div>
+            <div> Andrew: I look up to him as a role model as he always showed me the way and took care of me emotionally</div>
+            <div> Anthony: He was the first friend that took me out of my comfort zone and just made me happy everytime I saw him.</div>
+        </div>
+
 
         </main>
 
